# harpoon-apps

./: .gitignore  COPYING  README.md  SCR-harpoon-apps.txt  build_apps.sh  west.yml
LICENSES/: COPYING-BSD-3  (+2 more)
audio/freertos/boards/evkmimx8mm/armgcc_aarch64/: CMakeLists.txt  build_ddr_debug.sh  build_ddr_release.sh  flags.cmake  genavb_sdk.cmake
audio/freertos/boards/evkmimx8mn/armgcc_aarch64/: CMakeLists.txt  build_ddr_debug.sh  flags.cmake  genavb_sdk.cmake
audio/freertos/boards/evkmimx8mp/armgcc_aarch64/: CMakeLists.txt  build_ddr_debug.sh  build_ddr_release.sh  flags.cmake  genavb_sdk.cmake
audio/zephyr/: CMakeLists.txt  genavb.cmake  genavb_sdk.cmake  main.c  prj.conf
audio/zephyr/boards/: imx8mm_evk_mimx8mm6_a53.overlay  imx8mm_evk_mimx8mm6_a53_smp.overlay  imx8mn_evk_mimx8mn6_a53.conf  imx8mp_evk_mimx8ml8_a53.conf  imx8mp_evk_mimx8ml8_a53.overlay  imx8mp_evk_mimx8ml8_a53_smp.conf  imx8mp_evk_mimx8ml8_a53_smp.overlay  imx93_evk_mimx9352_a55.conf  imx93_evk_mimx9352_a55.overlay  mimx8mm_evk_a53_smp.conf  mimx8mn_evk_a53.conf  mimx8mn_evk_a53_smp.conf  mimx8mp_evk_a53.conf  mimx8mp_evk_a53_smp.conf  mimx93_evk_a55.conf
audio/zephyr/boards/evkmimx8mm/: app_mmu.c  app_mmu.h
audio/zephyr/boards/evkmimx8mm/armgcc_aarch64/: build_smp.sh
audio/zephyr/boards/evkmimx8mn/: app_mmu.c
audio/zephyr/boards/evkmimx8mn/armgcc_aarch64/: build_smp.sh
audio/zephyr/boards/evkmimx8mp/: app_mmu.c
audio/zephyr/boards/evkmimx8mp/armgcc_aarch64/: build_smp.sh
audio/zephyr/boards/mcimx93evk/: app_mmu.c
audio/zephyr/boards/mcimx93evk/armgcc_aarch64/: build_singlecore.sh  clean.sh
ctrl/: CMakeLists.txt  audio_pipeline.c  build_ctrl.sh  common.c  common.h  industrial.c  ivshmem.c  ivshmem.h  main.c  rpmsg.c  rpmsg.h
harpoon_drivers_test/freertos/boards/evkmimx8mp/armgcc_aarch64/: CMakeLists.txt  build_ddr_debug.sh  clean.sh
hello_world/freertos/boards/evkmimx8mn/armgcc_aarch64/: CMakeLists.txt  build_ddr_release.sh
hello_world/freertos/boards/evkmimx8mp/aarch64gcc/: CMakeLists.txt  build_ddr_debug.sh  build_ddr_release.sh  flags.cmake
hello_world/freertos/boards/imx95lpd5evk19/armgcc_aarch64/: CMakeLists.txt
hello_world/freertos/boards/mcimx93evk/armgcc_aarch64/: CMakeLists.txt  build_ddr_debug.sh  build_ddr_release.sh
hello_world/zephyr/: CMakeLists.txt  main.c  prj.conf
hello_world/zephyr/boards/: gpt.dtsi  imx8mn_evk_mimx8mn6_a53.overlay  imx8mp_evk_mimx8ml8_a53.overlay  imx93_evk_mimx9352_a55.overlay  imx943_evk_mimx94398_a55.overlay  imx95_evk15_mimx9596_a55.overlay  imx95_evk_15x15_mimx9596_a55.overlay  imx95_evk_mimx9596_a55.overlay
hello_world/zephyr/boards/evkmimx8mn/armgcc_aarch64/: build_singlecore.sh
hello_world/zephyr/boards/evkmimx8mp/armgcc_aarch64/: build_singlecore.sh
hello_world/zephyr/boards/imx95lp4xevk15/armgcc_aarch64/: build_singlecore.sh
hello_world/zephyr/boards/imx95lpd5evk19/armgcc_aarch64/: build_singlecore.sh
hello_world/zephyr/boards/mcimx93evk/armgcc_aarch64/: clean.sh
industrial/freertos/boards/evkmimx8mm/armgcc_aarch64/: CMakeLists.txt  build_ddr_debug.sh  genavb_sdk.cmake
industrial/freertos/boards/evkmimx8mn/armgcc_aarch64/: CMakeLists.txt  build_ddr_debug.sh  genavb_sdk.cmake
industrial/freertos/boards/imx95lp4xevk15/armgcc_aarch64/: CMakeLists.txt  genavb_sdk.cmake
industrial/zephyr/: CMakeLists.txt  genavb.cmake  genavb_sdk.cmake  industrial_os.h  main.c  prj.conf
industrial/zephyr/boards/: gpt.dtsi  imx8mm_evk_mimx8mm6_a53.overlay  imx8mp_evk_mimx8ml8_a53.overlay  imx93_evk_mimx9352_a55.conf  imx93_evk_mimx9352_a55.overlay  imx95_evk_15x15_mimx9596_a55.conf  imx95_evk_15x15_mimx9596_a55.overlay  imx95_evk_mimx9596_a55.conf  imx95_evk_mimx9596_a55.overlay  mimx8mm_evk_a53.conf  mimx8mn_evk_a53.conf  mimx8mp_evk_a53.conf  mimx8mp_evk_a53.overlay  mimx93_evk_a55.conf  tpm.dtsi
industrial/zephyr/boards/evkmimx8mm/: app_mmu.c  stub.c
industrial/zephyr/boards/evkmimx8mm/armgcc_aarch64/: build_singlecore.sh
industrial/zephyr/boards/evkmimx8mn/: app_mmu.c  stub.c
industrial/zephyr/boards/evkmimx8mn/armgcc_aarch64/: build_singlecore.sh
industrial/zephyr/boards/evkmimx8mp/: app_mmu.c  app_mmu.h  stub.c
industrial/zephyr/boards/evkmimx8mp/armgcc_aarch64/: build_singlecore.sh
industrial/zephyr/boards/imx95lp4xevk15/: app_mmu.c  clock_setup.c  clock_setup.h  ethernet_setup.c  pinctrl.c  pinctrl.h  stub.c
industrial/zephyr/boards/imx95lp4xevk15/armgcc_aarch64/: build_singlecore.sh
industrial/zephyr/boards/imx95lpd5evk19/: app_mmu.c  clock_setup.h  ethernet_setup.c  pinctrl.c  stub.c
industrial/zephyr/boards/imx95lpd5evk19/armgcc_aarch64/: build_singlecore.sh
industrial/zephyr/boards/mcimx93evk/: app_mmu.c  stub.c
rt_latency/freertos/boards/evkmimx8mn/armgcc_aarch64/: CMakeLists.txt
rt_latency/freertos/boards/evkmimx8mp/armgcc_aarch64/: CMakeLists.txt  flags.cmake
rt_latency/freertos/boards/imx95lpd5evk19/armgcc_aarch64/: CMakeLists.txt  build_ddr_debug.sh  build_ddr_release.sh
rt_latency/freertos/boards/mcimx93evk/armgcc_aarch64/: CMakeLists.txt  build_ddr_debug.sh
rt_latency/zephyr/: CMakeLists.txt  main.c  prj.conf
rt_latency/zephyr/boards/: gpt.dtsi  imx8mm_evk_mimx8mm6_a53.conf  imx8mn_evk_mimx8mn6_a53.overlay  imx8mp_evk_mimx8ml8_a53.overlay  imx93_evk_mimx9352_a55.overlay  imx943_evk_mimx94398_a55.conf  imx943_evk_mimx94398_a55.overlay  imx95_evk_15x15_mimx9596_a55.overlay  imx95_evk_mimx9596_a55.overlay  mimx8mp_evk_a53.conf  mimx8mp_evk_a53.overlay  mimx8mp_evk_a53_1core.conf  mimx93_evk_a55.conf  mimx93_evk_a55.overlay  tpm.dtsi
rt_latency/zephyr/include/: os.h  os_zephyr.h
rt_latency/zephyr/src/: main.c
rt_latency/zephyr/testcase1/: rt_tc_setup.h
rt_latency/zephyr/testcase2/: rt_tc_setup.h  testcase.yaml
rt_latency/zephyr/testcase3/: CMakeLists.txt  rt_tc_setup.h
rt_latency/zephyr/testcase4/: rt_tc_setup.h
rt_latency/zephyr/testcase6/: CMakeLists.txt  prj.conf  rt_tc_setup.h
rt_latency/zephyr/testcase7/: CMakeLists.txt  rt_tc_setup.h
rt_latency/zephyr/testcase7/boards/: mimx8mp_evk_a53_1core.conf  mimx8mp_evk_a53_1core.overlay  mimx8mp_evk_a53_jailhouse.conf
(+687 files in other folders)
